# ir_affinity

./: .env.dev  Cargo.toml  LICENSE  README.md  build.ps1  sqlx.sqlite
.sqlx/: query-04bdd85e9ce92404d4bb72e4f509225ecfc832b6d9f6e03df0c833a6e6c331ec.json  query-1e39f05f4a014f13de0a3f01dbaaff827f8e70a54d241aa975f884a3748b7928.json  query-1fb72770c147e23406863ae2aca599c84549cfa38c8884de4bd3f6163efbb6f1.json  query-a4e950018e8b31c2b670f45153203a5ca53fa5525692bee9b71106030c353578.json  query-b2384343eaa808f3c050d7e87f5be2e1ba1f3c09543b434a32aa9ed528a0a90c.json  query-eea9ece2b82ca4c01394e1dd588ac4e828b523e4cd76b96d6fd3c74581aba5fe.json
migrations/: 20260211085912_initial.sql
src/: errors.rs  ir.rs  lib.rs  main.rs  persistence.rs  selections.rs  tests.rs  worker.rs  wrappers.rs
src/ui/: errors.rs  logs.rs  mod.rs  selection.rs  status.rs
