[package]
name = "ir_affinity"
version = "0.1.0"
edition = "2024"

[dependencies]
backon = { version = "1.6.0", features = ["tokio-sleep"] }
bt_error = { git = "https://github.com/JoshuaXOng/bt_error.git", tag = "v0.1.0", version = "0.1.0" }
chrono = "0.4.43"
directories = "6.0.0"
iced = { version = "0.14.0", features = ["tokio"] }
remoteprocess = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
sysinfo = "0.38.1"
tokio = { version = "1.49.0", features = ["rt","macros"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.62.2"
windows-result = "0.4.1"
windows-service = "0.8.0"
